k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ms-nest-service
  labels:
    app: ms-nest
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
  selector:
    app: ms-nest
